# python-base

./: README.md  flake.nix  pyproject.toml
src/hello_world/: main.py
src/hello_world/tests/: test_main.py
