[tool.poetry]
name = "python-base"
version = "0.1.0"
description = "A starter Python project so I can get running faster."
authors = ["Ryan Slama <ryanmslama@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
ruff = "^0.0.256"
black = "^23.1.0"
pytest = "^7.2.2"
coverage = { extras = ["toml"], version = "^7.2.2" }
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hello_world"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
select = [
    "C",
    # Docstrings
    "D",
    # Pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # isort
    "I001",
]
ignore = [
    # Missing docstring in public module
    "D100",
    # Missing docstring in public package
    "D104",
    # no-blank-line-before-class (incompatible with D203)
    "D203",
    # multi-line-summary-first-line (incompatible with multi-line-summary-second-line)
    "D212",
]


[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
show_error_codes = true
show_column_numbers = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
